changed home and blog text

--- a/app/views/home/blog.slim
+++ b/app/views/home/blog.slim
@@ -5,11 +5,11 @@
         .posted-date
           | 06/25/2013
         .first-comment
-          | Yes!
-            Summer reading has come in the mail!
-            Thanks # ffcg!
+          | looks great
+            Great flag in Summer !
+            Thanks !
         .nick-name
-          = link_to "cim_d", "#"
+          = link_to "Ray", "#"
 
 .item
   .box.box-expanded.shade-box.image-ued
@@ -17,9 +17,11 @@
       .posted-date
         | 06/25/2013
       .first-comment
-        | Part of the trade is working at night, alone, with no distractions or maybe it's just me :...
+          | looks great
+            Great flag in Summer !
+            Thanks !
       .nick-name
-        = link_to "cim_d", "#"
+        = link_to "Ray", "#"
 
 = 2.times.each do
   .item
@@ -28,11 +30,11 @@
         .posted-date
           | 06/25/2013
         .first-comment
-          | Yes!
-            Summer reading has come in the mail!
-            Thanks # ffcg!
+          | looks great
+            Great flag in Summer !
+            Thanks !
         .nick-name
-          = link_to "cim_d", "#"
+          = link_to "Ray", "#"
 
 .item
   .box.box-expanded.shade-box.image-ued
@@ -40,9 +42,11 @@
       .posted-date
         | 06/25/2013
       .first-comment
-        | Part of the trade is working at night, alone, with no distractions or maybe it's just me :...
+        | looks great
+            Great flag in Summer !
+            Thanks !
       .nick-name
-        = link_to "cim_d", "#"
+        = link_to "Ray", "#"
 
 = 2.times.each do
   .item
@@ -51,8 +55,8 @@
         .posted-date
           | 06/25/2013
         .first-comment
-          | Yes!
-            Summer reading has come in the mail!
-            Thanks # ffcg!
+          | looks great
+              Great flag in Summer !
+              Thanks !
         .nick-name
-          = link_to "cim_d", "#"
+          = link_to "Ray", "#"
