--- a/app/views/home/home.slim
+++ b/app/views/home/home.slim
@@ -2,30 +2,27 @@
   .box.pointer.box-icon.box-icon-darkorigin onclick="location = '/#/services'"
     .mini
       i.icon-lightbulb.icon
-      h3 BUSINESS DESIGN
+      h3 OUTSOURCING DESIGN
       p
-        | Cretivity, design, flexibility. Important words, 
-          which we believe creates future business, 
-          Do you agree?
+        | Shinetech is the leader in next-generation global application outsourcing.
 
 .item
   .box.box-image.box-double#work_the_line
     .image-text
-      | WE HELP OUR CUSTOMERS ALONG THE JOURNEY FROM
+      | Shinetech utilizes distributed
       br
-      | STRATEGY TO RESPONSE
-
+      | Agile methods.
 .item
   .box.box-profile.employ-074.pointer onclick="location = '/#/frontiers'"
     .show-more-link
-      | Take a peek at more stylish Frontiers
-    .name.left-name MAGNUS
+      | Ruby developer
+    .name.left-name Paul Yang
 
 .item
   .box.box-profile.employ-107.pointer onclick="location = '/#/frontiers'"
     .show-more-link
-      | Take a peek at more stylish Frontiers
-    .name.right-name MAGNUS
+      | Ruby and JS developer
+    .name.right-name Raykin Lei
 
 .item
   .box.pointer onclick="location = '/#/references'"
@@ -35,10 +32,10 @@
       .posted-date
         | 06/25/2013
       .first-comment
-        | Yes!
-          Summer reading has come in the mail!
-          Thanks # ffcg!
+        | looks great
+          Great flag in Summer !
+          Thanks !
       .nick-name
-        = link_to "cim_d", "#"
+        = link_to "Ray", "#"
 .item
   .box.pointer
