changed if forefront text

--- a/app/views/home/if_forefront.slim
+++ b/app/views/home/if_forefront.slim
@@ -11,7 +11,7 @@
       .tab-contents
         - 5.times do |i|
           .tab-content class="#{'active' if i == 0}"
-            | #{i + 1} Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            | At Shinetech, our aim is to develop high-quality software and give developers promising careers in offshore IT outsourcing. We believe the best software is created by people who have exceptional technical capabilities and an innovative consciousness. Shinetech has been able to build a harmonious environment for our people to enjoy both work and life.
       ul.bullets
         - 5.times do |i|
           li.icon-circle class="#{'active' if i == 0}"
