changed services text

--- a/app/views/home/services.slim
+++ b/app/views/home/services.slim
@@ -6,13 +6,13 @@
   .box.box-expandable.box-expanded.box-icon.box-icon-brown
     .mini
       i.icon-lightbulb.icon
-      h3 BUSINESS TRANSFORMATION
-      p A successful change management is not just about reaching a goal.
+      h3 Software Outsourcing Services
+      p Shinetech utilizes distributed Agile methods for rapid and precise systems development.
     .maxi
       i.icon-lightbulb.icon
-      h3 BUSINESS TRANSFORMATION
-      p A successful change management is not just about reaching a goal. The target value is often a lasting effect or benefit. And it goes without saying that the way here is easier if management has the experience necessary to be able to support the project in the right way.
-      p On the Forefront Consulting Group, we can assume total responsibility for organizational development and change projects in IT. From project to realization. We weigh up the strategic plans with operational requirements and create the necessary structures for the targets. We also provide the support necessary for the client to implement the change on their own. Many customers come to us in addition to-date expertise on methods and tools in the field of change management.
+      h3 Software Outsourcing Services
+      p Shinetech is the leader in next-generation global application outsourcing. Our world-class technical skills, recognized expertise in advanced development methodologies and deep industry experience allow us to consistently deliver results for enterprises around the world.
+      p Shinetech utilizes distributed Agile methods for rapid and precise systems development.
 .item
   .box.box-expandable test
 .item
