--- a/app/views/home/references.slim
+++ b/app/views/home/references.slim
@@ -4,16 +4,16 @@
   .box.box-triple
     .slide
       ul.tabs
-        li.active CHALLENGETHE
-        li JOURNEYTHE
-        li RESULT
+        li.active Title1
+        li Title2
+        li Title3
       .tab-contents
         .tab-content.active
-          | Almi turned to Forefront for help with creating a smarter lending process. The existing arrangements rested on a system of paper and binders with the exception of some elements were handled in an outdated technological environment. The goal was to streamline operations, reduce risks, and last but not least to increase customer satisfaction. The challenge was also to further develop the IT support while reducing costs.
+          | Shinetech delivers high-quality, reliable and flexible software development and QA outsourcing services. Our application development uses advanced methodologies and leverages deep technology expertise that spans the entire application life cycle.
         .tab-content
-          | The project, still in progress, works Forefront as Almi client support from project start to final delivery. This means among other things that, together, we parted out how the process should be developed, which system support is required and who will deliver it. Soon it's time to launch the new lending process. When we are involved in ensuring that the original set of requirements have been met.
+          | Shinetech delivers high-quality, reliable and flexible software development and QA outsourcing services. Our application development uses advanced methodologies and leverages deep technology expertise that spans the entire application life cycle.
         .tab-content
-          | Although the project is not yet in port so are the expected impacts already quantified and qualified. But the simple truth is that faster turnaround times gives happier customers. We have created an efficient flow of information that will both facilitate document management and Almi give employees the right support in decision-making. The purchase will also risks to be managed more safely.
+          | Shinetech delivers high-quality, reliable and flexible software development and QA outsourcing services. Our application development uses advanced methodologies and leverages deep technology expertise that spans the entire application life cycle.
       ul.bullets
         li.active.icon-circle
         li.icon-circle
