--- a/app/views/home/frontiers.slim
+++ b/app/views/home/frontiers.slim
@@ -1,19 +1,19 @@
 = 4.times.each do
   .item
     .box.box-profile.shade-box.employ-107
-      .name.right-name MAGNUS
+      .name.right-name Raykin Lei
       .shade
         .employment-number
-          | # 199
+          | # 22
         .employment-details
-          = mail_to "test@shinetechchina.com"
+          = mail_to "leijing@shinetechchina.com"
 
 = 4.times.each do
   .item
     .box.box-profile.shade-box.employ-074
-      .name.left-name MAGNUS
+      .name.left-name Paul Yang
       .shade
         .employment-number
           | # 11
         .employment-details
-          = mail_to "test@shinetechchina.com"
+          = mail_to "yangbo@shinetechchina.com"
