--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -227,14 +227,13 @@ $box-triple-width: $box-width * 3 + $box-gap * 2
   background-image: url('/assets/walk_the_line.jpg')
 
 .employ-074
-  background-image: url('/assets/074.png')
+  background-image: url('/assets/default-user.jpg')
 
 .employ-107
-  background-image: url('/assets/107.png')
-  background-position: -261px 0
+  background-image: url('/assets/default-user.jpg')
 
 .image-flag
-  background-image: url('/assets/flag.jpg')
+  background-image: url('/assets/flag.png')
 
 .image-ued
   background-image: url('/assets/ued.jpg')
