Change menu items
* Change "IF FOREFRONT" to "COMPANY"
* Change "FRONTIERS" to "STAFF"

--- a/app/views/home/_header.slim
+++ b/app/views/home/_header.slim
@@ -7,12 +7,12 @@
     li class="active"
       = link_to 'HOME', '/#/home'
     li
-      = link_to 'IF FOREFRONT', '/#/if_forefront'
+      = link_to 'COMPANY', '/#/company'
     li
       = link_to 'SERVICES', '/#/services'
     li
       = link_to 'REFERENCES', '/#/references'
     li
-      = link_to 'FRONTIERS', '/#/frontiers'
+      = link_to 'STAFF', '/#/staff'
     li
       = link_to 'BLOG', '/#/blog'
