--- a/app/views/home/home.slim
+++ b/app/views/home/home.slim
@@ -13,13 +13,13 @@
       br
       | Agile methods.
 .item
-  .box.box-profile.employ-074.pointer onclick="location = '/#/frontiers'"
+  .box.box-profile.employ-074.pointer onclick="location = '/#/staff'"
     .show-more-link
       | Ruby developer
     .name.left-name Paul Yang
 
 .item
-  .box.box-profile.employ-107.pointer onclick="location = '/#/frontiers'"
+  .box.box-profile.employ-107.pointer onclick="location = '/#/staff'"
     .show-more-link
       | Ruby and JS developer
     .name.right-name Raykin Lei
