add refinerycms header to application layout and change CSS

--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -30,19 +30,23 @@ a
   width: 1152px
   overflow: hidden
 
-.logo
+#logo
   height: 73px
   margin-top: 40px
   text-align: center
   border-bottom: 1px solid #ddd
+  font-size: 14px
+  a
+    color: #f7941e!important
 
-.nav
+#menu
   font-size: 12px
   font-weight: 600
   margin: 21px auto
   line-height: 16px
   text-align: center
   text-shadow: 0 1px 0 rgba(255, 255, 255, .6)
+  text-transform: uppercase
   ul
     li
       padding: 0px 3px
@@ -51,7 +55,7 @@ a
       a
         color: #969289
         padding: 8px 12px
-    li.active a
+    li.selected a
       color: #f7941e
 
 .footer
