change background color

--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -1,8 +1,8 @@
-$main-color: #0099CC
+$main-color: #0099cc
 $font-color: #969289
 
 html
-  background-color: rgb(240, 245, 255)
+  background-color: #f5f1ed
   font-family: 'proxima-nova','Helvetica Neue',Arial,Helvetica,sans-serif
   font-size: 14px
   color: $font-color
