refactor css about maxi

--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -287,19 +287,13 @@ $box-triple-width: $box-width * 3 + $box-gap * 2
   .maxi
     display: none
     text-align: left
-    .icon
-      float: right
-      padding-right: 15px
-    h3
+    .maxi-inner
       padding-top: 15px
+      padding-right: 20px
       padding-left: 30px
-      font-size: 16px
-    p
-      padding-left: 30px
-      padding-right: 15px
       font-size: 16px
       line-height: 1.5
-    img
+    img, .icon
       float: right
 
   &.box-expanded
