add padding-left 10px to .icon in base.sass

--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -295,6 +295,8 @@ $box-triple-width: $box-width * 3 + $box-gap * 2
       line-height: 1.5
     img, .icon
       float: right
+    .icon
+      padding-left: 10px
 
   &.box-expanded
     .mini
