add weibo meta info

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,6 +2,7 @@ doctype html
 html
   head
     = render '/refinery/head'
+    meta property="wb:webmaster" content="60b0b8733880e339"
     - unless response.status == 404
       = javascript_include_tag "application"
   body
