Change background color

--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -1,8 +1,9 @@
-$main-color: #0099cc
+// $main-color: #0099cc
+$main-color: #00aff0
 $font-color: #969289
 
 html
-  background-color: #f5f1ed
+  background-color: #E7F1F5
   font-family: 'proxima-nova','Helvetica Neue',Arial,Helvetica,sans-serif
   font-size: 14px
   color: $font-color
