Switch font-awesome gem to a newer one

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,6 +1,6 @@
 /*
  *= require normalize
- *= require _font-awesome
+ *= require font-awesome
  *= require isotope
  *= require base
  *= require slide
