Add overlay module

--- a/app/assets/stylesheets/loading.sass
+++ b/app/assets/stylesheets/loading.sass
@@ -7,7 +7,7 @@ $loading-show-duration: 5s
   right: 0
   bottom: 0
   z-index: 2000
-  background-color: rgba(0, 0, 0, .2)
+  background-color: rgba(black, .5)
 
 .loading-mask
   position: absolute
