--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -330,24 +330,29 @@ $box-triple-width: $box-width * 3 + $box-gap * 2
   &.box-expanded:hover .box-hover-content
     opacity: 0
 
-.box-video .btn-play
-  display: inline-block
-  color: lighten($main-color, 5%)
-  font-size: 80px
-  line-height: 80px
-  width: 100px
-  height: 80px
-  position: absolute
-  top: 50%
-  left: 50%
-  margin-top: -40px
-  margin-left: -50px
-  opacity: .8
-  transition: opacity .5s
-  text-shadow: 0 0 20px rgba(0, 0, 0, .5)
+.box-video
+  background-repeat: no-repeat
+  background-position: center center
+  background-size: cover
 
-  &:hover
-    opacity: 1
+  .btn-play
+    display: inline-block
+    color: lighten($main-color, 5%)
+    font-size: 80px
+    line-height: 80px
+    width: 100px
+    height: 80px
+    position: absolute
+    top: 50%
+    left: 50%
+    margin-top: -40px
+    margin-left: -50px
+    opacity: .8
+    transition: opacity .5s
+    text-shadow: 0 0 20px rgba(black, .5)
+
+    &:hover
+      opacity: 1
 
 .page-not-found
   text-align: center
