Add box-staff css and refactor code

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -2,7 +2,9 @@
 //= require font-awesome
 //= require isotope
 
+@import variables
 @import base
 @import slide
 @import loading
 @import video_modal
+@import box/box_staff
