--- a/app/assets/stylesheets/variables.css.sass
+++ b/app/assets/stylesheets/variables.css.sass
@@ -1,3 +1,10 @@
 $color-link: #009ce0
 $color-font: #535b60
 $color-heading: #121b21
+
+$box-width: 276px
+$box-height: 288px
+$box-gap: 12px
+$box-double-width: $box-width * 2 + $box-gap
+$box-double-height: $box-height * 2 + $box-gap
+$box-triple-width: $box-width * 3 + $box-gap * 2
