--- a/app/assets/stylesheets/box_staff.css.sass
+++ b/app/assets/stylesheets/box_staff.css.sass
@@ -1,10 +1,7 @@
-.box-staff
-
 .staff-thumb
   float: left
   width: $box-width
   height: $box-height
-  background-image: image-url('staff/staff_1.jpg')
   background-size: cover
 
 .staff-name
@@ -24,9 +21,9 @@
   margin-left: $box-width
   padding: 10px
 
-  p
-    max-height: 143px
-    overflow: hidden
+.staff-description
+  max-height: 150px
+  overflow: hidden
 
 .social-links
   margin-top: 20px
