--- a/app/assets/stylesheets/box_staff.css.sass
+++ b/app/assets/stylesheets/box_staff.css.sass
@@ -12,7 +12,7 @@
   color: white
   background: rgba($main-color, .7)
   line-height: 2
-  transition: background .3s
+  @include transition(background .3s)
 
 .staff-thumb:hover .staff-name
   background: $main-color
