--- a/app/assets/stylesheets/video_modal.css.sass
+++ b/app/assets/stylesheets/video_modal.css.sass
@@ -18,8 +18,8 @@
     right: -27px
     text-shadow: 0 0 5px white
     z-index: 9999
-    transition: opacity .3s
     opacity: 0
+    @include transition(opacity .3s)
 
   &:hover .icon-stack
     opacity: 1
