--- a/app/views/refinery/_header.html.slim
+++ b/app/views/refinery/_header.html.slim
@@ -1,4 +1,6 @@
+- unless response.status == 404
+  #menu-wrapper
+    = render partial: "/refinery/menu", locals: {dom_id: 'menu', css: 'menu'}
 h1#logo
   = link_to Refinery::Core.site_name, refinery.root_path
-- unless response.status == 404
-  = render partial: "/refinery/menu", locals: {dom_id: 'menu', css: 'menu'}
+
