add sass variables to variables.css.sass

--- a/app/assets/stylesheets/variables.css.sass
+++ b/app/assets/stylesheets/variables.css.sass
@@ -1,3 +1,7 @@
+//$main-color: #0099cc
+$main-color: #00aff0
+$main-width: 1152px
+
 $color-link: #009ce0
 $color-font: #535b60
 $color-heading: #121b21
