improve UI of footer and logo

--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -39,8 +39,8 @@ a
   overflow: hidden
 
 #logo
-  height: 73px
-  margin-top: 40px
+  height: 100px
+  line-height: 100px
   text-align: center
   border-bottom: 1px solid #ddd
   font-size: 16px
@@ -77,18 +77,19 @@ a
 
 .footer
   font-size: 11px
-  margin-top: 30px
+  margin-top: 40px
   padding-bottom: 50px
   border-top: 1px solid #ddd
   text-transform: uppercase
 
 .footer-wrapper
+  margin-top: 30px
   text-align: center
   line-height: 2
   h1
     font-size: 13px
     letter-spacing: 1px
-    margin-bottom: 15px
+    margin-bottom: 3px
     font-weight: normal
   a
     color: $main-color!important
