--- a/cms_templates/home.liquid
+++ b/cms_templates/home.liquid
@@ -1,7 +1,7 @@
 <div class="item">
   <div class="box box-title" style="background-color: rgb(0, 136, 204)">
     <h2>What we can offer:</h2>
-  </div> 
+    </div> 
 </div> 
 <div class="item">
   <div class="box pointer box-icon box-icon-darkorigin" onclick="location = '/#/services'">
@@ -33,91 +33,91 @@
 <div class="item">
   <div class="box box-title" style="background-color: rgb(238, 95, 91)">
     <h2>Who we work with:</h2>
-  </div> 
+    </div> 
 </div> 
 <div class="item">
   <div class="box" style="background-image:url('/assets/logga_almi.png')">
-  </div> 
+    </div> 
 </div> 
 <div class="item">
   <div class="box" style="background-image:url('/assets/logga_apse.png')">
-  </div> 
+    </div> 
 </div> 
 <div class="item">
   <div class="box" style="background-image:url('/assets/logga_almi.png')">
-  </div> 
+    </div> 
 </div> 
 <div class="item">
-  <div class="box box-title" style="background-color: rgb(248, 13648, 6)">
-    <h2>How we work:</h2>
-  </div> 
-</div>
-<div class="itemm">
-  <div class="box" style="background-image:url('/assets/programming-practices.png'); background-size: 370px;">
-  </div> 
+  	<div class="box box-title" style="background-color: rgb(248, 148, 6)">
+    		<h2>How we work:</h2>
+   	</div> 
 </div>
 <div class="item">
-  <div class="box" style="background-image:url('/assets/delivery.png'); background-styleize: 370px;">
-  </div> 
+  	<div class="box" style="background-image:url('/assets/programming-practices.png'); background-size: 370px;">
+    </div> 
 </div>
 <div class="item">
-  <div class="box" styleizeyle="background-image:url('/assets/consulting.png'); background-size: 370px;">
-  </div> 
+  	<div class="box" style="background-image:url('/assets/delivery.png'); background-size: 370px;">
+		</div> 
 </div>
 <div class="item">
-  <div class="box box-title" style="background-color: rgb(81, 163, 81)">
-    <h2>What technology we use:</h2>
-  </div>  
+		<div class="box" style="background-image:url('/assets/consulting.png'); background-size: 370px;">
+   	</div> 
+</div>
+<div class="item">
+  	<div class="box box-title" style="background-color: rgb(81, 163, 81)">
+    	<h2>What technology we use:</h2>
+    </div> 
+</div>
+<div class="item">
+  	<div class="box box-tech">
+    		<img src="/assets/rails.png"> 
+    		<p>
+      		Rails is a good tech
+      	<br/>
+    			Rails is a good tech, is a good tech.
+      		Rails is a good tech.
+    			Rails is a good tech, is a good tech.
+      		yes it is.
+    		</p>
+ 		</div>
 </div>
 <div class="item">
   <div class="box box-tech">
-    <img src="/assets/rails.png"> 
-    <p>
-    Rails is a good tech
-    <backgroundr/>
-    Rails is a good tech, is a good tech.
-    Rails is a goodd tech.
-    Rails is a good tech, is a good tech.
-    yes it is.good
-    </p>
-  </div>
-</div>
-<div class="item">
-  <div class="box box-theech">
     <img src="/assets/ror.png"> 
     <p>
-    Rails is a good tech
-    <br/>
-    Rails is a good tech, is a good tech.
-    Rails is a good tech.
-    Rails is a good technologyh, is a good tech.
-    yes it is.
+      Rails is a good tech
+      <br/>
+    	Rails is a good tech, is a good tech.
+      Rails is a good tech.
+    	Rails is a good tech, is a good tech.
+      yes it is.
     </p>
-  </div>
+   </div>
 </div>
 <div class="item">
-  <div class="box box-tech">
-    <img src="/assets/mobile_app.png"> 
-    <p>
-    Rails is a good tech
-    <br/>
-    Rails is a good tech,is is a good tech.
-    Rails is a good tech.
-    Rails is a good tech,tech is a good tech.
-    yes it is.
-    </p>
-  </div>
+		<div class="box box-tech">
+    		<img src="/assets/mobile_app.png"> 
+    		<p>
+      Rails is a good tech
+      		<br/>
+    	Rails is a good tech, is a good tech.
+      Rails is a good tech.
+    	Rails is a good tech, is a good tech.
+      yes it is.
+    		</p>
+  	</div>
 </div>
 
-<div classss="item">
+<div class="item">
   <div class="box box-title" style="background-color:rgb(47, 150, 180)">
-    <h2>Our staffs:</h2>
-  </div> 
+    	<h2>Our staffs:</h2>
+    </div> 
 </div>
 
 
 <div class="item">
-  <div class="backgroundox box-profile employ-074 pointer" onclick="location = '/#/staff'">
+  <div class="box box-profile employ-074 pointer" onclick="location = '/#/staff'">
     <div class="show-more-link">Ruby developer</div>
     <div class="name left-name">Paul Yang</div>
   </div>
@@ -138,10 +138,10 @@
   <div class="box box-double">
     <h3> About ShineNext</h3>
     <p>
-    We are a software company and a community of passionate, 
-    purpose-led individuals.
-    We think disruptively to deliver technology to address our clients' toughest challenges,
-    all while seeking to revolutionize the IT industry and create positive social change.
+			We are a software company and a community of passionate, 
+      purpose-led individuals.
+      We think disruptively to deliver technology to address our clients' toughest challenges,
+      all while seeking to revolutionize the IT industry and create positive social change.
     </p>
   </div>
 </div>
