Adjust masthead color

--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -38,9 +38,10 @@ a
   padding: 50px 0
   color: white
   background: $color-link
-  @include linear-gradient(90deg, $color-link, darken($color-link, 20%))
+  @include linear-gradient(darken($color-link, 10%), lighten($color-link, 10%))
 
   h1
+    margin-top: 0
     font-size: 50px
     line-height: 50px
 
