Adjust services template css

--- a/app/assets/stylesheets/box_expandable.css.sass
+++ b/app/assets/stylesheets/box_expandable.css.sass
@@ -1,29 +1,10 @@
-// TODO need refactor
-.box .mini
-  padding-top: 20px
-
 .box-expandable
   .mini
     cursor: pointer
     display: block
 
-    // padding-top: 25px
-    // p
-    //   font-size: 14px
-    //   padding: 0 15px
-
   .maxi
     display: none
-    // text-align: left
-    // .maxi-inner
-    //   padding-top: 15px
-    //   padding-right: 20px
-    //   padding-left: 30px
-    //   font-size: 16px
-    //   line-height: 1.5
-    // img, .icon
-    //   float: right
-    //   padding-left: 15px
 
 .box-expanded
   .mini
@@ -36,3 +17,7 @@
   // width: $box-double-width
   // height: $box-double-height
   // border-width: 0
+
+.box-2x
+  width: $box-width * 2 + $box-gap
+  height: $box-height * 2 + $box-gap
