--- a/cms_templates/services.liquid
+++ b/cms_templates/services.liquid
@@ -1,18 +1,16 @@
 {% for s in services %}
 <div class="item">
-  <div class="box box-expandable {% if s.expanded %}box-expanded{% endif %} box-icon">
-    <div class="box-hover-content" style="border-color: {{ s.color }}"></div>
+  <div class="box box-service box-expandable {% if s.expanded %}box-expanded box-2x{% endif %}" data-expanded-class="box-2x">
     <div class="mini">
-      <em class="icon icon-{{ s.icon }}" style="color: {{ s.color }}"></em>
+      <div class="box-hover-content" style="border-color: {{ s.color }}"></div>
+      <i class="icon icon-{{ s.icon }}" style="color: {{ s.color }}"></i>
       <h3 style="color: {{ s.color }}">{{ s.title }}</h3>
       <p>{{ s.short_content }}</p>
     </div>
     <div class="maxi">
-      <div class="maxi-inner">
-      	<em class="icon icon-{{ s.icon }}" style="color: {{ s.color }}"></em>
-      	<h3 style="color: {{ s.color }}">{{ s.title }}</h3>
-      	{{ s.content }}
-      </div>
+      <i class="icon icon-{{ s.icon }}" style="color: {{ s.color }}"></i>
+      <h2 style="color: {{ s.color }}">{{ s.title }}</h2>
+      {{ s.content }}
     </div>
   </div>
 </div>
