Ajust service box in home template

--- a/cms_templates/home.liquid
+++ b/cms_templates/home.liquid
@@ -4,32 +4,32 @@
     </div> 
 </div> 
 <div class="item">
-  <div class="box pointer box-icon box-icon-darkorigin" onclick="location = '/#/services'">
+  <div class="box box-service" onclick="location = '/#/services'">
     <div class="mini">
-      <em class="icon-lightbulb icon"></em>
+      <i class="icon icon-lightbulb"></i>
       <h3>OUTSOURCING DESIGN</h3>
       <p>Shinetech is the leader in next-generation global application outsourcing.</p>
-    </div> 
+    </div>
   </div>
-</div> 
+</div>
 <div class="item">
-  <div class="box pointer box-icon box-icon-darkorigin" onclick="location = '/#/services'">
+  <div class="box box-service" onclick="location = '/#/services'">
     <div class="mini">
-      <em class="icon-lightbulb icon"></em>
+      <i class="icon icon-lightbulb"></i>
       <h3>OUTSOURCING DESIGN</h3>
       <p>Shinetech is the leader in next-generation global application outsourcing.</p>
-    </div> 
+    </div>
   </div>
-</div> 
+</div>
 <div class="item">
-  <div class="box pointer box-icon box-icon-darkorigin" onclick="location = '/#/services'">
+  <div class="box box-service" onclick="location = '/#/services'">
     <div class="mini">
-      <em class="icon-lightbulb icon"></em>
+      <i class="icon icon-lightbulb"></i>
       <h3>OUTSOURCING DESIGN</h3>
       <p>Shinetech is the leader in next-generation global application outsourcing.</p>
-    </div> 
+    </div>
   </div>
-</div> 
+</div>
 <div class="item">
   <div class="box box-title" style="background-color: rgb(238, 95, 91)">
     <h2>Who we work with:</h2>
