fix menu to top

--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -33,7 +33,12 @@ a
 .pointer
   cursor: pointer
 
+#site_bar
+  margin-top: 32px
+  margin-bottom: -32px
+
 .masthead
+  margin-top: 32px
   margin-bottom: 20px
   padding: 50px 0
   color: white
@@ -61,6 +66,11 @@ a
 
 #menu-wrapper
   background-color: #252525
+  z-index: 999
+  width: 100%
+  position: fixed
+  top: 0
+
 #menu
   width: $main-width
   background-color: #252525
