improve about box

--- a/cms_templates/home.liquid
+++ b/cms_templates/home.liquid
@@ -135,7 +135,7 @@
   </div>
 </div>
 <div class="item style">
-  <div class="box box-double">
+  <div class="box box-double box-about">
     <h3> About ShineNext</h3>
     <p>
 			We are a software company and a community of passionate, 
