improve contact box

--- a/cms_templates/home.liquid
+++ b/cms_templates/home.liquid
@@ -146,8 +146,14 @@
   </div>
 </div>
 <div class="item">
-  <div class="box pointer">
-    <h2>Connect with us</h2>
+  <div class="box pointer box-contact">
+    <h3>Connect with us</h3>
+    <ul>
+      <li><i class="icon-envelope"></i></li>
+      <li><i class="icon-weibo"></i></li>
+      <li><i class="icon-twitter"></i></li>
+      <li><i class="icon-github"></i></li>
+    </ul>
   </div>
 </div>
 <div class="item">
