--- a/app/assets/stylesheets/box.css.sass
+++ b/app/assets/stylesheets/box.css.sass
@@ -10,3 +10,16 @@
     line-height: 1.8
     color: rgb(102, 102, 102)
 
+.box-contact
+  h3
+    font-size: 25px
+    margin-top: 40px
+    font-weight: 300
+  ul
+    font-size: 65px
+    color: rgb(102, 102, 102)
+    margin-left: 70px
+  li
+    float: left
+    padding-right: 20px
+    padding-bottom: 10px
