Replace isotope with Manory

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,6 +1,5 @@
 //= require normalize
 //= require font-awesome
-//= require isotope
 
 @import bourbon
 @import variables
@@ -14,3 +13,4 @@
 @import box_title
 @import box_tech
 @import box_service
+@import masonry
