--- a/cms_templates/home.liquid
+++ b/cms_templates/home.liquid
@@ -1,163 +1,108 @@
-<div class="item">
-  <div class="box box-title" style="background-color: rgb(0, 136, 204)">
-    <h2>What we can offer:</h2>
-    </div> 
+<div class="box box-title" style="background-color: rgb(0, 136, 204)">
+  <h2>What we can offer:</h2>
 </div> 
-<div class="item">
-  <div class="box box-service" onclick="location = '/#/services'">
-    <div class="mini">
-      <i class="icon icon-lightbulb"></i>
-      <h3>OUTSOURCING DESIGN</h3>
-      <p>Shinetech is the leader in next-generation global application outsourcing.</p>
-    </div>
+<div class="box box-service" onclick="location = '/#/services'">
+  <div class="mini">
+    <i class="icon icon-lightbulb"></i>
+    <h3>OUTSOURCING DESIGN</h3>
+    <p>Shinetech is the leader in next-generation global application outsourcing.</p>
   </div>
 </div>
-<div class="item">
-  <div class="box box-service" onclick="location = '/#/services'">
-    <div class="mini">
-      <i class="icon icon-lightbulb"></i>
-      <h3>OUTSOURCING DESIGN</h3>
-      <p>Shinetech is the leader in next-generation global application outsourcing.</p>
-    </div>
+<div class="box box-service" onclick="location = '/#/services'">
+  <div class="mini">
+    <i class="icon icon-lightbulb"></i>
+    <h3>OUTSOURCING DESIGN</h3>
+    <p>Shinetech is the leader in next-generation global application outsourcing.</p>
   </div>
 </div>
-<div class="item">
-  <div class="box box-service" onclick="location = '/#/services'">
-    <div class="mini">
-      <i class="icon icon-lightbulb"></i>
-      <h3>OUTSOURCING DESIGN</h3>
-      <p>Shinetech is the leader in next-generation global application outsourcing.</p>
-    </div>
+<div class="box box-service" onclick="location = '/#/services'">
+  <div class="mini">
+    <i class="icon icon-lightbulb"></i>
+    <h3>OUTSOURCING DESIGN</h3>
+    <p>Shinetech is the leader in next-generation global application outsourcing.</p>
   </div>
 </div>
-<div class="item">
-  <div class="box box-title" style="background-color: rgb(238, 95, 91)">
-    <h2>Who we work with:</h2>
-    </div> 
-</div> 
-<div class="item">
-  <div class="box" style="background-image:url('/assets/logga_almi.png')">
-    </div> 
-</div> 
-<div class="item">
-  <div class="box" style="background-image:url('/assets/logga_apse.png')">
-    </div> 
-</div> 
-<div class="item">
-  <div class="box" style="background-image:url('/assets/logga_almi.png')">
-    </div> 
-</div> 
-<div class="item">
-  	<div class="box box-title" style="background-color: rgb(248, 148, 6)">
-    		<h2>How we work:</h2>
-   	</div> 
+<div class="box box-title" style="background-color: rgb(238, 95, 91)">
+  <h2>Who we work with:</h2>
 </div>
-<div class="item">
-  	<div class="box" style="background-image:url('/assets/programming-practices.png'); background-size: 370px;">
-    </div> 
+<div class="box" style="background-image:url('/assets/logga_almi.png')"></div>
+<div class="box" style="background-image:url('/assets/logga_apse.png')"></div>
+<div class="box" style="background-image:url('/assets/logga_almi.png')"></div>
+<div class="box box-title" style="background-color: rgb(248, 148, 6)">
+  <h2>How we work:</h2>
 </div>
-<div class="item">
-  	<div class="box" style="background-image:url('/assets/delivery.png'); background-size: 370px;">
-		</div> 
+<div class="box" style="background-image:url('/assets/programming-practices.png'); background-size: 370px;"></div>
+<div class="box" style="background-image:url('/assets/delivery.png'); background-size: 370px;"></div>
+<div class="box" style="background-image:url('/assets/consulting.png'); background-size: 370px;"></div>
+<div class="box box-title" style="background-color: rgb(81, 163, 81)">
+  <h2>What technology we use:</h2>
 </div>
-<div class="item">
-		<div class="box" style="background-image:url('/assets/consulting.png'); background-size: 370px;">
-   	</div> 
+<div class="box box-tech">
+  <img src="/assets/rails.png">
+  <p>
+    Rails is a good tech
+    <br/>
+    Rails is a good tech, is a good tech.
+    Rails is a good tech.
+    Rails is a good tech, is a good tech.
+    yes it is.
+  </p>
 </div>
-<div class="item">
-  	<div class="box box-title" style="background-color: rgb(81, 163, 81)">
-    	<h2>What technology we use:</h2>
-    </div> 
+<div class="box box-tech">
+  <img src="/assets/ror.png">
+  <p>
+    Rails is a good tech
+    <br/>
+    Rails is a good tech, is a good tech.
+    Rails is a good tech.
+    Rails is a good tech, is a good tech.
+    yes it is.
+  </p>
 </div>
-<div class="item">
-  	<div class="box box-tech">
-    		<img src="/assets/rails.png"> 
-    		<p>
-      		Rails is a good tech
-      	<br/>
-    			Rails is a good tech, is a good tech.
-      		Rails is a good tech.
-    			Rails is a good tech, is a good tech.
-      		yes it is.
-    		</p>
- 		</div>
+<div class="box box-tech">
+  <img src="/assets/mobile_app.png">
+  <p>
+    Rails is a good tech
+    <br/>
+    Rails is a good tech, is a good tech.
+    Rails is a good tech.
+    Rails is a good tech, is a good tech.
+    yes it is.
+  </p>
 </div>
-<div class="item">
-  <div class="box box-tech">
-    <img src="/assets/ror.png"> 
-    <p>
-      Rails is a good tech
-      <br/>
-    	Rails is a good tech, is a good tech.
-      Rails is a good tech.
-    	Rails is a good tech, is a good tech.
-      yes it is.
-    </p>
-   </div>
+<div class="box box-title" style="background-color:rgb(47, 150, 180)">
+  <h2>Our staffs:</h2>
 </div>
-<div class="item">
-		<div class="box box-tech">
-    		<img src="/assets/mobile_app.png"> 
-    		<p>
-      Rails is a good tech
-      		<br/>
-    	Rails is a good tech, is a good tech.
-      Rails is a good tech.
-    	Rails is a good tech, is a good tech.
-      yes it is.
-    		</p>
-  	</div>
+<div class="box box-profile employ-074 pointer" onclick="location = '/#/staff'">
+  <div class="show-more-link">Ruby developer</div>
+  <div class="name left-name">Paul Yang</div>
 </div>
-
-<div class="item">
-  <div class="box box-title" style="background-color:rgb(47, 150, 180)">
-    	<h2>Our staffs:</h2>
-    </div> 
+<div class="box box-profile employ-107 pointer" onclick="location = '/#/staff'">
+  <div class="show-more-link">Ruby and JS developer</div>
+  <div class="name right-name">Raykin Lei</div>
 </div>
-
-
-<div class="item">
-  <div class="box box-profile employ-074 pointer" onclick="location = '/#/staff'">
-    <div class="show-more-link">Ruby developer</div>
-    <div class="name left-name">Paul Yang</div>
-  </div>
+<div class="box box-profile employ-107 pointer" onclick="location = '/#/staff'">
+  <div class="show-more-link">Ruby developer</div>
+  <div class="name right-name">Aaron</div>
 </div>
-<div class="item">
-  <div class="box box-profile employ-107 pointer" onclick="location = '/#/staff'">
-    <div class="show-more-link">Ruby and JS developer</div>
-    <div class="name right-name">Raykin Lei</div>
-  </div>
+<div class="box box-double box-about">
+  <h3> About ShineNext</h3>
+  <p>
+    We are a software company and a community of passionate, 
+    purpose-led individuals.
+    We think disruptively to deliver technology to address our clients' toughest challenges,
+    all while seeking to revolutionize the IT industry and create positive social change.
+  </p>
 </div>
-<div class="item">
-  <div class="box box-profile employ-107 pointer" onclick="location = '/#/staff'">
-    <div class="show-more-link">Ruby developer</div>
-    <div class="name right-name">Aaron</div>
-  </div>
+<div class="box pointer box-contact">
+  <h3>Connect with us</h3>
+  <ul>
+    <li><i class="icon-envelope"></i></li>
+    <li><i class="icon-weibo"></i></li>
+    <li><i class="icon-twitter"></i></li>
+    <li><i class="icon-github"></i></li>
+  </ul>
 </div>
-<div class="item style">
-  <div class="box box-double box-about">
-    <h3> About ShineNext</h3>
-    <p>
-			We are a software company and a community of passionate, 
-      purpose-led individuals.
-      We think disruptively to deliver technology to address our clients' toughest challenges,
-      all while seeking to revolutionize the IT industry and create positive social change.
-    </p>
-  </div>
-</div>
-<div class="item">
-  <div class="box pointer box-contact">
-    <h3>Connect with us</h3>
-    <ul>
-      <li><i class="icon-envelope"></i></li>
-      <li><i class="icon-weibo"></i></li>
-      <li><i class="icon-twitter"></i></li>
-      <li><i class="icon-github"></i></li>
-    </ul>
-  </div>
-</div>
-<div class="item">
-  <div class="box box-video" data-video-id="Eqv3Et_EqJs">
-    <a class="btn-play"><i class="icon-play"></i></a>
-  </div>
+<div class="box box-video" data-video-id="Eqv3Et_EqJs">
+  <a class="btn-play"><i class="icon-play"></i></a>
 </div>
