Change ajax page to normal, add technology tag for frontend pages

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,6 +1,7 @@
 //= require normalize
 //= require font-awesome
 
+@import bootstrap
 @import bourbon
 @import variables
 @import base
@@ -14,3 +15,4 @@
 @import box_tech
 @import box_service
 @import masonry
+@import dropdown_tag
