--- a/app/assets/stylesheets/variables.css.sass
+++ b/app/assets/stylesheets/variables.css.sass
@@ -1,10 +1,11 @@
 //$main-color: #0099cc
 $main-color: #00aff0
-$main-width: 1152px
 
 $color-link: #009ce0
 $color-font: #535b60
 $color-heading: #121b21
+$color-main: $main-color
+// $color-main: #27A1C5
 
 $box-width: 276px
 $box-height: 288px
@@ -12,3 +13,5 @@ $box-gap: 12px
 $box-double-width: $box-width * 2 + $box-gap
 $box-double-height: $box-height * 2 + $box-gap
 $box-triple-width: $box-width * 3 + $box-gap * 2
+
+$main-width: $box-width * 4 + $box-gap * 3
