--- a/app/assets/stylesheets/base.sass
+++ b/app/assets/stylesheets/base.sass
@@ -53,7 +53,7 @@ a
 .wrapper
   margin: 0 auto
   width: $main-width
-  overflow: hidden
+  // overflow: hidden
 
 #logo
   height: 100px
@@ -72,7 +72,7 @@ a
   top: 0
 
 #menu
-  width: $main-width
+  float: left
   background-color: #252525
   margin: 0 auto
   padding: 8px 0
