--- a/app/views/site/home.html.erb
+++ b/app/views/site/home.html.erb
@@ -1,37 +1,35 @@
 <div class="box box-title" style="background-color: rgb(0, 136, 204)">
   <h2>What we can offer:</h2>
 </div>
-<div class="box box-service" onclick="location = '/#/services'">
+<div class="box box-service" onclick="location = '/services'">
   <div class="mini">
     <i class="icon icon-lightbulb"></i>
     <h3>OUTSOURCING DESIGN</h3>
     <p>Shinetech is the leader in next-generation global application outsourcing.</p>
   </div>
 </div>
-<div class="box box-service" onclick="location = '/#/services'">
+<div class="box box-service" onclick="location = '/services'">
   <div class="mini">
     <i class="icon icon-lightbulb"></i>
     <h3>OUTSOURCING DESIGN</h3>
     <p>Shinetech is the leader in next-generation global application outsourcing.</p>
   </div>
 </div>
-<div class="box box-service" onclick="location = '/#/services'">
+<div class="box box-service" onclick="location = '/services'">
   <div class="mini">
     <i class="icon icon-lightbulb"></i>
     <h3>OUTSOURCING DESIGN</h3>
     <p>Shinetech is the leader in next-generation global application outsourcing.</p>
   </div>
 </div>
-
 
 <div class="box box-title" style="background-color: rgb(238, 95, 91)">
   <h2>Who we work with:</h2>
 </div>
 <% @customers.each do |customer| %>
-  <div class="box" style="background-image: url('<%= customer.image.url %>'); background-position: center;"></div>
+  <div class="box" style="background-image: url('<%= customer.image.url %>'); background-position: center;" onclick="location = '/clients'"></div>
 <% end %>
 <%= fill_with_boxes 3 - @customers.size if @customers.size < 3 %>
-
 
 <div class="box box-title" style="background-color: rgb(248, 148, 6)">
   <h2>How we work:</h2>
@@ -39,7 +37,6 @@
 <div class="box" style="background-image:url('/assets/programming-practices.png'); background-size: 370px;"></div>
 <div class="box" style="background-image:url('/assets/delivery.png'); background-size: 370px;"></div>
 <div class="box" style="background-image:url('/assets/consulting.png'); background-size: 370px;"></div>
-
 
 <div class="box box-title" style="background-color: rgb(81, 163, 81)">
   <h2>What technology we use:</h2>
@@ -52,12 +49,11 @@
 <% end %>
 <%= fill_with_boxes 3 - @techs.size if @techs.size < 3 %>
 
-
 <div class="box box-title" style="background-color:rgb(47, 150, 180)">
   <h2>Our staffs:</h2>
 </div>
 <% for staff in @staffs %>
-  <div class="box box-staff box-expandable">
+  <div class="box box-staff box-expandable" onclick="location = '/staff'">
     <div class="mini">
       <div class="staff-thumb" style="background-image: url('<%= staff.image_url %>');">
         <div class="staff-name"><%= staff.name %></div>
@@ -66,7 +62,6 @@
   </div>
 <% end %>
 <%= fill_with_boxes 3 - @staffs.size if @staffs.size < 3 %>
-
 
 <div class="box box-double box-about">
   <h3> About ShineNext</h3>
