Add clients page
* Add clients page
* Use neat for layout
* Refactor code

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,9 +1,13 @@
 //= require normalize
 //= require font-awesome
 
-@import bootstrap
-@import bourbon
 @import variables
+@import bootstrap
+
+// mixin 和布局
+@import bourbon
+@import neat
+
 @import base
 @import slide
 @import loading
@@ -14,5 +18,5 @@
 @import box_title
 @import box_tech
 @import box_service
-@import masonry
+@import box_client
 @import dropdown_tag
