--- a/app/views/refinery/_header.html.slim
+++ b/app/views/refinery/_header.html.slim
@@ -1,6 +1,6 @@
 - unless response.status == 404
   #menu-wrapper
-    .wrapper style="position: relative;"
+    .container style="position: relative;"
       = render partial: "/refinery/menu", locals: {dom_id: 'menu', css: 'menu'}
 
       .dropdown.dropdown-tag
