--- a/app/assets/stylesheets/variables.css.sass
+++ b/app/assets/stylesheets/variables.css.sass
@@ -15,3 +15,10 @@ $box-double-height: $box-height * 2 + $box-gap
 $box-triple-width: $box-width * 3 + $box-gap * 2
 
 $main-width: $box-width * 4 + $box-gap * 3
+
+// neat grid
+$max-width: 1170px
+$column: 90px
+$gutter: 20px
+
+$font-family: "Open Sans", "Microsoft YaHei", "微软雅黑", "Hiragino Sans GB", "Hiragino Sans GB W3", "Helvetica Neue", Arial, sans-serif
