completed blog feature

--- a/app/assets/stylesheets/box.css.sass
+++ b/app/assets/stylesheets/box.css.sass
@@ -56,6 +56,9 @@
     background: rgba(223, 124, 6, .4)
     padding: 25px 0
 
+.background-image-adaptive-box
+  background-size: max($box-width, $box-height)
+
 .shade-box>*
   position: absolute
   width: 100%
@@ -101,18 +104,18 @@
 
   .posted-date
     position: absolute
-    top: 120px
+    top: 30px
     font-weight: 600
     width: 100%
     font-size: 12px
 
-  .first-comment
+  .blog-content
     position: absolute
-    top: 150px
+    top: 65px
     left: 50%
     margin-left: -123px
     width: 246px
-    font-size: 16px
+    font-size: 13px
     font-style: italic
     line-height: 1.5
 
