Adjust box-title font

--- a/app/assets/stylesheets/box_title.css.sass
+++ b/app/assets/stylesheets/box_title.css.sass
@@ -1,7 +1,5 @@
 .box-title h2
-  line-height: 270px
-  font-family: Palatino, Georgia, serif
-  font-weight: bold
-  font-style: italic
-  text-shadow: 0 1px 0 rgba(255, 255, 255, .6)
+  margin: 0
+  padding: 0
+  line-height: $box-height
   color: #fff
